# tuclip

./: AGENTS.md  LICENSE  README.md  README_EN.md  index.html  package-lock.json  package.json  vite.config.ts
electron/: main.cjs  preload.cjs  remote.cjs  storage.cjs
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs  storage.rs
src/components/: CaptureEditor.tsx  CaptureGrid.tsx  PendingPanel.tsx  PopupShell.tsx  PreferencesPanel.tsx  RemoteSettingsPanel.tsx  ShortcutSettings.tsx  Sidebar.tsx
src/lib/: api.ts  capture-groups.test.ts  capture-groups.ts  i18n.test.ts  i18n.ts  shortcuts.test.ts  shortcuts.ts  theme.test.ts  theme.ts  vision.test.ts  vision.ts
src/types/: app.ts
