[package]
name = "noteshot"
version = "0.1.0"
description = "Screenshot workflow manager for tutorial writers"
authors = ["Codex"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "noteshot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
arboard = "3.6.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
image = { version = "0.25", default-features = false, features = ["png"] }
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
tokio = { version = "1", features = ["time"] }
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
